--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,59 +1,5 @@
+/* Styling for the navigation bar */
 .NavBar {
-    background-color: #ffffff;
+    background-color: rgb(230, 230, 248);
     border: 1px solid #dadadf;
-}
-
-/* Change the color of the Font Awesome icons */
-.iconColor {
-    color: #d4af37;
-    margin-right: 8px;
-}
-
-/* responsive navbar toggler with hamburger to X transformation */
-/* Inspired by: "https://youtu.be/_MrShB9fh7U?si=na9LouEIB1-m1kMt# */
-.navbar-toggler {
-    width: 40px;
-    height: 28px;
-    display: flex;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    background: transparent;
-    border: none;
-    padding: 0;
-}
-
-.navbar-toggler span {
-    width: 100%;
-    height: 4px;
-    background-color: #d4af37;
-    transition: transform 0.25s ease-in-out, opacity 0.25s ease-in-out;
-    position: absolute;
-}
-
-.navbar-toggler span:nth-child(1) {
-    top: 0px;
-}
-
-.navbar-toggler span:nth-child(2) {
-    top: 12px;
-}
-
-.navbar-toggler span:nth-child(3) {
-    top: 24px;
-}
-
-.navbar-toggler.active span:nth-child(1) {
-    transform: rotate(45deg);
-    top: 12px;
-}
-
-.navbar-toggler.active span:nth-child(2) {
-    opacity: 0;
-}
-
-.navbar-toggler.active span:nth-child(3) {
-    transform: rotate(-45deg);
-    top: 12px;
 }
