feat: implement basic routing with React Router
Add routing functionality to the application using React Router

Set up BrowserRouter, Switch, and Route components in index.js and App.js

Add NavLink components in NavBar for Home, Sign In, and Sign Up navigation

Adjust CSS in NavBar.module.css to handle styling of active links correctly

Ensure routing updates virtual DOM without refreshing the page

Introduce a catch-all Route to handle undefined URLs.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,11 @@
     min-height: 100vh;
 }
 
+/* Push down underneath navbar */
+.Main {
+    padding-top: 81px;
+}
+
 /* Universal box-sizing model for all elements */
 * {
     box-sizing: border-box;
