--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,5 +1,16 @@
 /* Styling for the navigation bar */
 .NavBar {
-    background-color: rgb(230, 230, 248);
+    background-color: #e6e6f8;
     border: 1px solid #dadadf;
+}
+
+/* General styling for links in the navigation bar */
+.NavLink {
+    padding: 5px;
+}
+
+/* Changes icon color when the navigation link is active */
+/* indicating the current page */
+.Active i {
+    color: #2142b2;
 }
