--- a/src/styles/ContactForm.module.css
+++ b/src/styles/ContactForm.module.css
@@ -11,3 +11,20 @@
     text-align: center;
     margin-bottom: 20px;
 }
+
+/* Style for the input field */
+.inputField {
+    border: 2px solid #ced4da;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+/* Style for the error message */
+.errorMessage {
+    color: rgb(117, 21, 21);
+    font-size: 14px;
+    margin-top: 5px;
+}
