feat&chore: Add btn style & clean up ProfilPages
 Add color&style to block/unblock btn and

add inline comment in ProfilePage

fix the closing tags

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -80,15 +80,15 @@
 }
 
 /* Gray button and hover state */
-.Gray,
-.GrayOutline:hover {
+.Greige,
+.GreigeOutline:hover {
     background-color: #7d726c;
     color: #ffffff;
 }
 
 /* Gray outline button and hover state */
-.GrayOutline,
-.Gray:hover {
+.GreigeOutline,
+.Greige:hover {
     background-color: #ffffff;
     color: #7d726c;
 }
