--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,9 +1,10 @@
 .Post {
     background-color: #ffffff;
-    border: 1px solid #dadadf;
+    border: 1px solid #f0d2ee;
     border-radius: 2px;
     margin-bottom: 16px;
     text-align: center;
+    border-radius:20px;
 }
 
 .Post figure,
@@ -12,7 +13,7 @@ h5 {
 }
 
 .Heart {
-    color: #f85032;
+    color: #f90647;
 }
 
 .Heart:hover {
@@ -20,7 +21,7 @@ h5 {
 }
 
 .HeartOutline:hover {
-    color: #f85032;
+    color: #f90647;
 }
 
 /* Styles for hashtag container */
