--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,7 +17,7 @@
     padding: 10px;
     border-radius: 20px;
     border: 1px solid #f0d2ee;
-    box-shadow: 3px 3px 5px #bc9bbb;
+    box-shadow: 0 3px 5px #bc9bbb;
     color: #6d398a;
 }
 
