--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -2,7 +2,7 @@
 .NavBar {
     background-color: #e8f7e5;
     border: 1px solid #dadadf;
-    box-shadow: 3px 3px 10px #bc9bbb;
+    box-shadow: 0 3px 10px #bc9bbb;
 }
 
 /* General styling for links in the navigation bar */
