--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -4,7 +4,7 @@
     border-radius: 2px;
     margin-bottom: 16px;
     text-align: center;
-    box-shadow: 3px 3px 5px #bc9bbb;
+    box-shadow: 0 3px 5px #bc9bbb;
 }
 
 .Post figure,
