--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -4,7 +4,7 @@
     padding-left: 40px;
     margin-bottom: 16px;
     border: solid 1px #f0d2ee;
-    box-shadow: 3px 3px 5px #bc9bbb;
+    box-shadow: 0 3px 5px #bc9bbb;
 }
 
 .SearchIcon {
