--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -102,11 +102,12 @@
     background-color: #6d398a;
     color: #ffffff;
 }
+
 /* SignUp */
 /* Lilac outline button and hover state */
 .LilacOutline,
 .Lilac:hover {
-    background-color: #ed4c32;
+    background-color: #0c7b04;
     color: #ffffff;
 }
 
@@ -122,6 +123,6 @@
 /* Green outline button and hover state */
 .GreenOutline,
 .Green:hover {
-    background-color: #ed4c32;
+    background-color: #6d398a;
     color: #ffffff;
 }
