chore/doc: Update TESTING.md with Wave info
Update README with Reusability chapter

Correct the Wave issues in code

missing aria-labels, alt text and contrast issues

--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -1,6 +1,11 @@
 .Form {
     border: none;
     border-bottom: 2px #00d1ff solid;
+    color: #966496;
+}
+
+.Form textarea {
+    color: #966496;
 }
 
 .Button {
